<resources>
    <string name="app_name">CrossyRoadTeam51</string>
    <string name="medium">Medium</string>
    <string name="easy">Easy</string>
    <string name="hard">Hard</string>
    <string name="frog">Frog</string>
    <string name="ladybug">Ladybug</string>
    <string name="butterfly">Butterfly</string>
    <string name="name">Name: </string>
    <string name="difficulty">Difficulty: </string>
    <string name="character">Character: </string>
    <string name="title_activity_main_game">MainGameActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="score">Score:</string>
    <string name="title_activity_end_game">EndGameActivity</string>
</resources>
