<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <EditText
        android:id="@+id/textView"
        android:layout_width="591dp"
        android:layout_height="195dp"
        android:text="Please enter your name!"
        android:textSize="14sp" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/radio_easy"
            android:layout_width="133dp"
            android:layout_height="match_parent"
            android:text="@string/easy" />

        <RadioButton
            android:id="@+id/radio_medium"
            android:layout_width="153dp"
            android:layout_height="match_parent"
            android:text="@string/medium" />

        <RadioButton
            android:id="@+id/radio_hard"
            android:layout_width="147dp"
            android:layout_height="match_parent"
            android:text="@string/hard" />

    </RadioGroup>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:src="@drawable/all"
        android:scaleType="fitXY"/>

    <RadioGroup
        android:id="@+id/radioGroup2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/radio_frog"
            android:layout_width="137dp"
            android:layout_height="match_parent"
            android:onClick="onRadioClickFrog"
            android:text="@string/frog" />

        <RadioButton
            android:id="@+id/radio_ladybug"
            android:layout_width="152dp"
            android:layout_height="match_parent"
            android:onClick="onRadioClickLadybug"
            android:text="@string/ladybug" />

        <RadioButton
            android:id="@+id/radio_butterfly"
            android:layout_width="101dp"
            android:layout_height="match_parent"
            android:onClick="onRadioClickButterfly"
            android:text="@string/butterfly" />

    </RadioGroup>

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Continue!" />

</LinearLayout>