<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textname"
        android:layout_width="76dp"
        android:layout_height="wrap_content"
        android:text="@string/name" />

    <TextView
        android:id="@+id/textdifficulty"
        android:layout_width="116dp"
        android:layout_height="wrap_content"
        android:text="@string/difficulty" />

    <TextView
        android:id="@+id/textchar"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:text="@string/character" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="100dp"
        android:layout_height="200dp"
        app:srcCompat="@drawable/all" />

    <TextView
        android:id="@+id/textpoints"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Score: 0" />

    <TextView
        android:id="@+id/textlives"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Lives: " />

    <Button
        android:id="@+id/button2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Start Game" />
</LinearLayout>